# RAW-Image-Tools

./: README.md
T872_output_images/: portrait-gainx2-offset2047-20ms-02.raw12_channel_1.pgm  portrait-gainx2-offset2047-20ms-02.raw12_channel_2.pgm  portrait-gainx2-offset2047-20ms-02.raw12_channel_3.pgm  portrait-gainx2-offset2047-20ms-02.raw12_channel_4.pgm
src/: CMakeLists.txt
src/LJ92_core/: CMakeLists.txt  lj92_core.cpp
src/LJ92_eval/: CMakeLists.txt  lj92_eval.cpp  ssss_draw.cpp  ssss_draw.h
src/Raw12_rand/: CMakeLists.txt  raw12_rand.cpp
src/T872_challenge/: CMakeLists.txt  challenge.cpp
src/core/: CMakeLists.txt  Optimal_LUT.ipynb  assert.h  bayer_image.cpp  bayer_image.h  bit_iterator.cpp  bit_iterator.h  bitdepth_converter.cpp  bitdepth_converter.h  channel_iterator.cpp  channel_iterator.h  debayered_image.cpp  debayered_image.h  image.cpp  image.h  lj92_image.cpp  lj92_image.h
src/lib_dng/: CMakeLists.txt  chdk-dng.c  chdk-dng.h  lib_dng.cpp  lib_dng.h  raw.h
src/lib_pnm/: CMakeLists.txt  lib_pnm.cpp  lib_pnm.h
